# debugwand

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build.yml  lint.yml  test.yml  typecheck.yml
debugwand/: __init__.py  attacher.py  cli.py  container.py  debugpy_template.py  k8s.py  kubernetes.py  operations.py  types.py  ui.py
docs/: hot-reload.md  troubleshooting.md
tests/: test_k8s.py  test_mantis.py  test_operations.py  test_wand.py
